--- a/OrderTracker/App.config
+++ b/OrderTracker/App.config
@@ -1,7 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
-    <configSections>
-    </configSections>
+    <appSettings>    
+    <add key="MailID" value="testprojectbyteam@gmail.com" />
+    </appSettings>
+
     <connectionStrings>
         <add name="OrderTracker.Properties.Settings.OrderConnectionString"
             connectionString="Provider=Microsoft.ACE.OLEDB.12.0;Data Source=|DataDirectory|\App_Code\Order.accdb"
