--- a/OrderTracker/App.config
+++ b/OrderTracker/App.config
@@ -1,10 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
    
+    <configSections>
+    </configSections>
     <connectionStrings>
-        <add name="OrderTracker.Properties.Settings.OrderConnectionString"
-            connectionString="Provider=Microsoft.ACE.OLEDB.12.0;Data Source=|DataDirectory|\App_Code\Order.accdb"
-            providerName="System.Data.OleDb" />
         <add name="OrderTracker.Properties.Settings.ordertrackerConnectionString"
             connectionString="server=localhost;user id=order;database=ordertracker;pwd=Order1234;"
             providerName="MySql.Data.MySqlClient" />
